# ICCIDGen

./: CMakeLists.txt  Makefile  README.md  bitstream.cpp  encrypt.cpp  hash.cpp  main.cpp  utils.cpp
include/: bitstream.h  encrypt.h  hash.h  utils.h
test/: mipupptest.cpp  sstest.cpp
